# Digital-Brain

./: README.md  docker-compose.yml
.github/workflows/: deploy-docker-to-ec2.yml  test-ssh.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: app.py
backend/app/database/: database_manager.py  retriever.py
backend/app/routers/: query.py  sources.py  storage.py
backend/app/servicces/: text_splitter.py
backend/app/services/: hyde_generator.py  response_generator.py  text_splitter.py
backend/app/storage/: storage_manager.py
frontend/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: env.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/colors/: page.tsx
frontend/src/components/MainPage/: MainPage.tsx
frontend/src/components/ui/AddSource/: AddSourceButton.tsx
frontend/src/components/ui/Chat/: AssistantMessage.tsx  Chat.tsx  ChatHeader.tsx  ChatQueryBox.tsx  ConversationBox.tsx  LoadingMessage.tsx  Message.tsx  QueryBox.tsx  UserMessage.tsx
frontend/src/components/ui/Sidebar/: Sidebar.tsx  SidebarContainer.tsx
frontend/src/config/: env.ts
frontend/src/store/: useChatStore.ts  useFilesStore.ts
